--- a/src/Calculator.css
+++ b/src/Calculator.css
@@ -7,7 +7,7 @@
     background: #f9f9f9;
   }
   .display {
-    background: #222;
+    background: #7d7b7b;
     color: #fff;
     border-radius: 5px;
     padding: 10px;
